feat: Convert TaskbarAcrylicOpacity from toggle to 3-option ComboBox with config migration
Setting now offers "Windows default" (deletes registry value), "Transparent" (0), and "Opaque" (255) instead of the broken toggle that only switched between 0 and 1. Added ConfigMigrationService to automatically migrate old exported configs that used the toggle format. Also added missing Config_Import_Status_RestartingExplorer localization key to all 24 non-English locale files.

Fixes #361

--- a/src/Winhance.UI/Features/Common/Localization/af.json
+++ b/src/Winhance.UI/Features/Common/Localization/af.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "Pas Optimaliserings Toe...",
   "Config_Import_Progress_Customize": "Pas Pasmaak Toe...",
   "Config_Import_Progress_Refresh": "Verfris Windows UI...",
+  "Config_Import_Status_RestartingExplorer": "Herbegin Verkenner...",
   "Config_Import_Success_Title": "Konfigurasie Toegepas",
   "Config_Import_Success_Message": "Jou konfigurasie is suksesvol toegepas.",
   "Config_Import_Error_NoSelection": "Kies asseblief ten minste een afdeling om in te voer.",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "Wys die Widgets knoppie wat gepersonaliseerde nuus, weer, kalender, en ander inligting vertoon",
   "Setting_taskbar-news-and-interests_Name": "Wys Nuus en Belangstellings",
   "Setting_taskbar-news-and-interests_Description": "Wys die Nuus en Belangstellings widget wat opskrifte, weer, aandele, en ander gepersonaliseerde inhoud vertoon",
-  "Setting_taskbar-transparent_Name": "Maak taakbalk deursigtig",
-  "Setting_taskbar-transparent_Description": "Beheer die deursigtigheid van die taakbalk",
+  "Setting_taskbar-transparent_Name": "Taakbalk-deursigtigheid",
+  "Setting_taskbar-transparent_Description": "Beheer die deursigtigheidsgraad van die taakbalk. Winhance aktiveer outomaties deursigtigheidseffekte wanneer hierdie instelling toegepas word",
+  "Setting_taskbar-transparent_Option_0": "Windows-verstek",
+  "Setting_taskbar-transparent_Option_1": "Deursigtig",
+  "Setting_taskbar-transparent_Option_2": "Ondeursigtig",
   "Setting_taskbar-small_Name": "Maak taakbalk klein",
   "Setting_taskbar-small_Description": "Verminder die hoogte van die taakbalk deur kleiner ikone te gebruik, wat jou meer skermruimte gee",
   "Setting_taskbar-end-task_Name": "Aktiveer 'Beëindig Taak' in Taakbalk",
