--- a/src/Winhance.UI/Features/Common/Localization/ar.json
+++ b/src/Winhance.UI/Features/Common/Localization/ar.json
@@ -94,6 +94,7 @@
     "Config_Import_Progress_Optimize": "جارٍ تطبيق التحسينات...",
     "Config_Import_Progress_Customize": "جارٍ تطبيق التخصيصات...",
     "Config_Import_Progress_Refresh": "جارٍ تحديث واجهة Windows...",
+    "Config_Import_Status_RestartingExplorer": "جارٍ إعادة تشغيل المستكشف...",
     "Config_Import_Success_Title": "تم تطبيق الإعدادات",
     "Config_Import_Success_Message": "تم تطبيق إعداداتك بنجاح.",
     "Config_Import_Error_NoSelection": "يرجى تحديد قسم واحد على الأقل للاستيراد.",
@@ -272,8 +273,11 @@
     "Setting_taskbar-widgets_Description": "إظهار زر الأدوات الذي يعرض الأخبار والطقس والتقويم ومعلومات أخرى مخصصة",
     "Setting_taskbar-news-and-interests_Name": "إظهار الأخبار والاهتمامات",
     "Setting_taskbar-news-and-interests_Description": "إظهار أداة الأخبار والاهتمامات التي تعرض العناوين والطقس والأسهم ومحتوى مخصصًا آخر",
-    "Setting_taskbar-transparent_Name": "جعل شريط المهام شفافًا",
-    "Setting_taskbar-transparent_Description": "يتحكم في شفافية شريط المهام",
+    "Setting_taskbar-transparent_Name": "شفافية شريط المهام",
+    "Setting_taskbar-transparent_Description": "يتحكم في مستوى شفافية شريط المهام. يقوم Winhance بتمكين تأثيرات الشفافية تلقائيًا عند تطبيق هذا الإعداد",
+    "Setting_taskbar-transparent_Option_0": "افتراضي Windows",
+    "Setting_taskbar-transparent_Option_1": "شفاف",
+    "Setting_taskbar-transparent_Option_2": "معتم",
     "Setting_taskbar-small_Name": "تصغير شريط المهام",
     "Setting_taskbar-small_Description": "تقليل ارتفاع شريط المهام باستخدام أيقونات أصغر لمنحك مساحة شاشة أكبر",
     "Setting_taskbar-end-task_Name": "تمكين \"إنهاء المهمة\" في شريط المهام",
