--- a/src/Winhance.UI/Features/Common/Localization/cs.json
+++ b/src/Winhance.UI/Features/Common/Localization/cs.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "Aplikování optimalizací...",
   "Config_Import_Progress_Customize": "Aplikování přizpůsobení...",
   "Config_Import_Progress_Refresh": "Aktualizace uživatelského rozhraní Windows...",
+  "Config_Import_Status_RestartingExplorer": "Restartování Průzkumníka...",
   "Config_Import_Success_Title": "Konfigurace použita",
   "Config_Import_Success_Message": "Vaše konfigurace byla úspěšně použita.",
   "Config_Import_Error_NoSelection": "Pro import prosím vyberte alespoň jednu sekci.",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "Zobrazit tlačítko Widgety, které zobrazuje personalizované zprávy, počasí, kalendář a další informace",
   "Setting_taskbar-news-and-interests_Name": "Zobrazit zprávy a zájmy",
   "Setting_taskbar-news-and-interests_Description": "Zobrazit widget Zprávy a zájmy, který zobrazuje titulky, počasí, akcie a další personalizovaný obsah",
-  "Setting_taskbar-transparent_Name": "Udělat hlavní panel průhledným",
-  "Setting_taskbar-transparent_Description": "Řídí průhlednost hlavního panelu",
+  "Setting_taskbar-transparent_Name": "Průhlednost hlavního panelu",
+  "Setting_taskbar-transparent_Description": "Řídí úroveň průhlednosti hlavního panelu. Winhance automaticky povolí efekty průhlednosti, když je toto nastavení použito",
+  "Setting_taskbar-transparent_Option_0": "Výchozí Windows",
+  "Setting_taskbar-transparent_Option_1": "Průhledný",
+  "Setting_taskbar-transparent_Option_2": "Neprůhledný",
   "Setting_taskbar-small_Name": "Udělat hlavní panel malým",
   "Setting_taskbar-small_Description": "Zmenšit výšku hlavního panelu použitím menších ikon, což vám poskytne více místa na obrazovce",
   "Setting_taskbar-end-task_Name": "Povolit 'Ukončit úlohu' na hlavním panelu",
