--- a/src/Winhance.UI/Features/Common/Localization/de.json
+++ b/src/Winhance.UI/Features/Common/Localization/de.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "Optimierungen werden angewendet...",
   "Config_Import_Progress_Customize": "Anpassungen werden angewendet...",
   "Config_Import_Progress_Refresh": "Windows-Benutzeroberfläche wird aktualisiert...",
+  "Config_Import_Status_RestartingExplorer": "Explorer wird neu gestartet...",
   "Config_Import_Success_Title": "Konfiguration angewendet",
   "Config_Import_Success_Message": "Ihre Konfiguration wurde erfolgreich angewendet.",
   "Config_Import_Error_NoSelection": "Bitte wählen Sie mindestens einen Abschnitt zum Importieren aus.",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "Die Schaltfläche 'Widgets' anzeigen, die personalisierte Nachrichten, Wetter, Kalender und andere Informationen anzeigt",
   "Setting_taskbar-news-and-interests_Name": "Nachrichten und Interessen anzeigen",
   "Setting_taskbar-news-and-interests_Description": "Das Widget 'Nachrichten und Interessen' anzeigen, das Schlagzeilen, Wetter, Aktien und andere personalisierte Inhalte anzeigt",
-  "Setting_taskbar-transparent_Name": "Taskleiste transparent machen",
-  "Setting_taskbar-transparent_Description": "Steuert die Transparenz der Taskleiste",
+  "Setting_taskbar-transparent_Name": "Taskleisten-Transparenz",
+  "Setting_taskbar-transparent_Description": "Steuert die Transparenzstufe der Taskleiste. Winhance aktiviert automatisch Transparenzeffekte, wenn diese Einstellung angewendet wird",
+  "Setting_taskbar-transparent_Option_0": "Windows-Standard",
+  "Setting_taskbar-transparent_Option_1": "Transparent",
+  "Setting_taskbar-transparent_Option_2": "Undurchsichtig",
   "Setting_taskbar-small_Name": "Taskleiste klein machen",
   "Setting_taskbar-small_Description": "Reduzieren Sie die Höhe der Taskleiste durch die Verwendung kleinerer Symbole, um mehr Bildschirmfläche zu erhalten",
   "Setting_taskbar-end-task_Name": "'Task beenden' in der Taskleiste aktivieren",
