--- a/src/Winhance.UI/Features/Common/Localization/el.json
+++ b/src/Winhance.UI/Features/Common/Localization/el.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "Εφαρμογή Βελτιστοποιήσεων...",
   "Config_Import_Progress_Customize": "Εφαρμογή Προσαρμογών...",
   "Config_Import_Progress_Refresh": "Ανανέωση Περιβάλλοντος Εργασίας Windows...",
+  "Config_Import_Status_RestartingExplorer": "Επανεκκίνηση της Εξερεύνησης...",
   "Config_Import_Success_Title": "Η Διαμόρφωση Εφαρμόστηκε",
   "Config_Import_Success_Message": "Η διαμόρφωσή σας εφαρμόστηκε με επιτυχία.",
   "Config_Import_Error_NoSelection": "Παρακαλώ επιλέξτε τουλάχιστον μία ενότητα για εισαγωγή.",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "Εμφάνιση του κουμπιού Widgets που προβάλλει εξατομικευμένες ειδήσεις, καιρό, ημερολόγιο και άλλες πληροφορίες",
   "Setting_taskbar-news-and-interests_Name": "Εμφάνιση Ειδήσεων και Ενδιαφερόντων",
   "Setting_taskbar-news-and-interests_Description": "Εμφάνιση του widget Ειδήσεων και Ενδιαφερόντων που προβάλλει τίτλους ειδήσεων, καιρό, μετοχές και άλλο εξατομικευμένο περιεχόμενο",
-  "Setting_taskbar-transparent_Name": "Κάντε τη γραμμή εργασιών διαφανή",
-  "Setting_taskbar-transparent_Description": "Ελέγχει τη διαφάνεια της γραμμής εργασιών",
+  "Setting_taskbar-transparent_Name": "Διαφάνεια γραμμής εργασιών",
+  "Setting_taskbar-transparent_Description": "Ελέγχει το επίπεδο διαφάνειας της γραμμής εργασιών. Το Winhance ενεργοποιεί αυτόματα τα εφέ διαφάνειας όταν εφαρμόζεται αυτή η ρύθμιση",
+  "Setting_taskbar-transparent_Option_0": "Προεπιλογή Windows",
+  "Setting_taskbar-transparent_Option_1": "Διαφανής",
+  "Setting_taskbar-transparent_Option_2": "Αδιαφανής",
   "Setting_taskbar-small_Name": "Κάντε τη γραμμή εργασιών μικρή",
   "Setting_taskbar-small_Description": "Μείωση του ύψους της γραμμής εργασιών χρησιμοποιώντας μικρότερα εικονίδια, δίνοντάς σας περισσότερο χώρο στην οθόνη",
   "Setting_taskbar-end-task_Name": "Ενεργοποίηση \u0027Τερματισμού Εργασίας\u0027 στη Γραμμή Εργασιών",
