--- a/src/Winhance.UI/Features/Common/Localization/es.json
+++ b/src/Winhance.UI/Features/Common/Localization/es.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "Aplicando Optimizaciones...",
   "Config_Import_Progress_Customize": "Aplicando Personalizaciones...",
   "Config_Import_Progress_Refresh": "Actualizando la Interfaz de Usuario de Windows...",
+  "Config_Import_Status_RestartingExplorer": "Reiniciando el Explorador...",
   "Config_Import_Success_Title": "Configuración Aplicada",
   "Config_Import_Success_Message": "Tu configuración se ha aplicado correctamente.",
   "Config_Import_Error_NoSelection": "Selecciona al menos una sección para importar.",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "Muestra el botón de Widgets que muestra noticias personalizadas, clima, calendario y otra información",
   "Setting_taskbar-news-and-interests_Name": "Mostrar Noticias e Intereses",
   "Setting_taskbar-news-and-interests_Description": "Muestra el widget de Noticias e Intereses que muestra titulares, clima, cotizaciones bursátiles y otro contenido personalizado",
-  "Setting_taskbar-transparent_Name": "Hacer la barra de tareas transparente",
-  "Setting_taskbar-transparent_Description": "Controla la transparencia de la barra de tareas",
+  "Setting_taskbar-transparent_Name": "Transparencia de la barra de tareas",
+  "Setting_taskbar-transparent_Description": "Controla el nivel de transparencia de la barra de tareas. Winhance activa automáticamente los efectos de transparencia cuando se aplica esta configuración",
+  "Setting_taskbar-transparent_Option_0": "Predeterminado de Windows",
+  "Setting_taskbar-transparent_Option_1": "Transparente",
+  "Setting_taskbar-transparent_Option_2": "Opaco",
   "Setting_taskbar-small_Name": "Hacer la barra de tareas pequeña",
   "Setting_taskbar-small_Description": "Reduce la altura de la barra de tareas usando iconos más pequeños, dándote más espacio en la pantalla",
   "Setting_taskbar-end-task_Name": "Habilitar 'Finalizar tarea' en la barra de tareas",
