--- a/src/Winhance.UI/Features/Common/Localization/fr.json
+++ b/src/Winhance.UI/Features/Common/Localization/fr.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "Application des optimisations...",
   "Config_Import_Progress_Customize": "Application des personnalisations...",
   "Config_Import_Progress_Refresh": "Actualisation de l'interface utilisateur de Windows...",
+  "Config_Import_Status_RestartingExplorer": "Redémarrage de l'Explorateur...",
   "Config_Import_Success_Title": "Configuration appliquée",
   "Config_Import_Success_Message": "Votre configuration a été appliquée avec succès.",
   "Config_Import_Error_NoSelection": "Veuillez sélectionner au moins une section à importer.",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "Afficher le bouton Widgets qui affiche des actualités, la météo, le calendrier et d'autres informations personnalisées",
   "Setting_taskbar-news-and-interests_Name": "Afficher les actualités et les centres d'intérêt",
   "Setting_taskbar-news-and-interests_Description": "Afficher le widget Actualités et centres d'intérêt qui affiche les titres, la météo, les actions et d'autres contenus personnalisés",
-  "Setting_taskbar-transparent_Name": "Rendre la barre des tâches transparente",
-  "Setting_taskbar-transparent_Description": "Contrôle la transparence de la barre des tâches",
+  "Setting_taskbar-transparent_Name": "Transparence de la barre des tâches",
+  "Setting_taskbar-transparent_Description": "Contrôle le niveau de transparence de la barre des tâches. Winhance active automatiquement les effets de transparence lorsque ce paramètre est appliqué",
+  "Setting_taskbar-transparent_Option_0": "Par défaut Windows",
+  "Setting_taskbar-transparent_Option_1": "Transparent",
+  "Setting_taskbar-transparent_Option_2": "Opaque",
   "Setting_taskbar-small_Name": "Rendre la barre des tâches petite",
   "Setting_taskbar-small_Description": "Réduire la hauteur de la barre des tâches en utilisant des icônes plus petites, vous donnant plus d'espace à l'écran",
   "Setting_taskbar-end-task_Name": "Activer 'Fin de tâche' dans la barre des tâches",
