--- a/src/Winhance.UI/Features/Common/Localization/hi.json
+++ b/src/Winhance.UI/Features/Common/Localization/hi.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "ऑप्टिमाइज़ेशन लागू कर रहा है...",
   "Config_Import_Progress_Customize": "कस्टमाइज़ेशन लागू कर रहा है...",
   "Config_Import_Progress_Refresh": "विंडोज UI रीफ्रेश कर रहा है...",
+  "Config_Import_Status_RestartingExplorer": "एक्सप्लोरर पुनः प्रारंभ हो रहा है...",
   "Config_Import_Success_Title": "कॉन्फ़िगरेशन लागू किया गया",
   "Config_Import_Success_Message": "आपकी कॉन्फ़िगरेशन सफलतापूर्वक लागू हो गई है।",
   "Config_Import_Error_NoSelection": "आयात करने के लिए कृपया कम से कम एक अनुभाग चुनें।",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "व्यक्तिगत समाचार, मौसम, कैलेंडर और अन्य जानकारी प्रदर्शित करने वाला विजेट बटन दिखाएं",
   "Setting_taskbar-news-and-interests_Name": "समाचार और रुचियाँ दिखाएँ",
   "Setting_taskbar-news-and-interests_Description": "समाचार और रुचियाँ विजेट दिखाएँ जो सुर्खियाँ, मौसम, स्टॉक और अन्य व्यक्तिगत सामग्री प्रदर्शित करता है",
-  "Setting_taskbar-transparent_Name": "टास्कबार को पारदर्शी बनाएँ",
-  "Setting_taskbar-transparent_Description": "टास्कबार की पारदर्शिता को नियंत्रित करता है",
+  "Setting_taskbar-transparent_Name": "टास्कबार पारदर्शिता",
+  "Setting_taskbar-transparent_Description": "टास्कबार की पारदर्शिता के स्तर को नियंत्रित करता है। इस सेटिंग को लागू करने पर Winhance स्वचालित रूप से पारदर्शिता प्रभाव सक्षम करता है",
+  "Setting_taskbar-transparent_Option_0": "Windows डिफ़ॉल्ट",
+  "Setting_taskbar-transparent_Option_1": "पारदर्शी",
+  "Setting_taskbar-transparent_Option_2": "अपारदर्शी",
   "Setting_taskbar-small_Name": "टास्कबार को छोटा बनाएँ",
   "Setting_taskbar-small_Description": "छोटे आइकन का उपयोग करके टास्कबार की ऊँचाई कम करें, जिससे आपको अधिक स्क्रीन स्पेस मिलता है",
   "Setting_taskbar-end-task_Name": "टास्कबार में 'कार्य समाप्त करें' सक्षम करें",
