--- a/src/Winhance.UI/Features/Common/Localization/hu.json
+++ b/src/Winhance.UI/Features/Common/Localization/hu.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "Optimalizálások alkalmazása...",
   "Config_Import_Progress_Customize": "Testreszabások alkalmazása...",
   "Config_Import_Progress_Refresh": "Windows UI frissítése...",
+  "Config_Import_Status_RestartingExplorer": "Az Intéző újraindítása...",
   "Config_Import_Success_Title": "Konfiguráció alkalmazva",
   "Config_Import_Success_Message": "A konfiguráció alkalmazása sikeresen megtörtént.",
   "Config_Import_Error_NoSelection": "Kérjük, válasszon legalább egy részt az importáláshoz.",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "Mutassa a Widgetek gombot, amely személyre szabott híreket, időjárást, naptárt és egyéb információkat jelenít meg",
   "Setting_taskbar-news-and-interests_Name": "Hírek és érdekességek megjelenítése",
   "Setting_taskbar-news-and-interests_Description": "Mutassa a Hírek és érdekességek minialkalmazást, amely a címlapokat, időjárást, részvényeket és más személyre szabott tartalmakat jeleníti meg",
-  "Setting_taskbar-transparent_Name": "Tegye átlátszóvá a tálcát",
-  "Setting_taskbar-transparent_Description": "A tálca átlátszóságának szabályozása",
+  "Setting_taskbar-transparent_Name": "Tálca átlátszósága",
+  "Setting_taskbar-transparent_Description": "A tálca átlátszósági szintjének szabályozása. A Winhance automatikusan engedélyezi az átlátszósági effektusokat, amikor ezt a beállítást alkalmazza",
+  "Setting_taskbar-transparent_Option_0": "Windows alapértelmezett",
+  "Setting_taskbar-transparent_Option_1": "Átlátszó",
+  "Setting_taskbar-transparent_Option_2": "Átlátszatlan",
   "Setting_taskbar-small_Name": "Kicsinyítse a tálcát",
   "Setting_taskbar-small_Description": "Csökkentsd a tálca magasságát kisebb ikonok használatával, így több hely marad a képernyőn",
   "Setting_taskbar-end-task_Name": "Engedélyezze a „Feladat befejezése” funkciót a tálcán",
