--- a/src/Winhance.UI/Features/Common/Localization/it.json
+++ b/src/Winhance.UI/Features/Common/Localization/it.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "Applicazione delle ottimizzazioni in corso...",
   "Config_Import_Progress_Customize": "Applicazione delle personalizzazioni in corso...",
   "Config_Import_Progress_Refresh": "Aggiornamento dell'interfaccia utente di Windows in corso...",
+  "Config_Import_Status_RestartingExplorer": "Riavvio di Esplora risorse...",
   "Config_Import_Success_Title": "Configurazione applicata",
   "Config_Import_Success_Message": "La tua configurazione è stata applicata con successo.",
   "Config_Import_Error_NoSelection": "Seleziona almeno una sezione da importare.",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "Mostra il pulsante Widget che visualizza notizie personalizzate, meteo, calendario e altre informazioni",
   "Setting_taskbar-news-and-interests_Name": "Mostra Notizie e interessi",
   "Setting_taskbar-news-and-interests_Description": "Mostra il widget Notizie e interessi che visualizza titoli, meteo, azioni e altri contenuti personalizzati",
-  "Setting_taskbar-transparent_Name": "Rendi la barra delle applicazioni trasparente",
-  "Setting_taskbar-transparent_Description": "Controlla la trasparenza della barra delle applicazioni",
+  "Setting_taskbar-transparent_Name": "Trasparenza della barra delle applicazioni",
+  "Setting_taskbar-transparent_Description": "Controlla il livello di trasparenza della barra delle applicazioni. Winhance abilita automaticamente gli effetti di trasparenza quando questa impostazione viene applicata",
+  "Setting_taskbar-transparent_Option_0": "Predefinito di Windows",
+  "Setting_taskbar-transparent_Option_1": "Trasparente",
+  "Setting_taskbar-transparent_Option_2": "Opaco",
   "Setting_taskbar-small_Name": "Rendi la barra delle applicazioni piccola",
   "Setting_taskbar-small_Description": "Riduci l'altezza della barra delle applicazioni utilizzando icone più piccole, offrendoti più spazio sullo schermo",
   "Setting_taskbar-end-task_Name": "Abilita 'Termina attività' nella barra delle applicazioni",
