--- a/src/Winhance.UI/Features/Common/Localization/ja.json
+++ b/src/Winhance.UI/Features/Common/Localization/ja.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "最適化を適用中...",
   "Config_Import_Progress_Customize": "カスタマイズを適用中...",
   "Config_Import_Progress_Refresh": "Windows UIを更新中...",
+  "Config_Import_Status_RestartingExplorer": "エクスプローラーを再起動しています...",
   "Config_Import_Success_Title": "構成が適用されました",
   "Config_Import_Success_Message": "構成が正常に適用されました。",
   "Config_Import_Error_NoSelection": "インポートするセクションを少なくとも1つ選択してください。",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "パーソナライズされたニュース、天気、カレンダー、その他の情報を表示するウィジェットボタンを表示",
   "Setting_taskbar-news-and-interests_Name": "ニュースと関心事を表示",
   "Setting_taskbar-news-and-interests_Description": "見出し、天気、株価、その他のパーソナライズされたコンテンツを表示するニュースと関心事ウィジェットを表示",
-  "Setting_taskbar-transparent_Name": "タスクバーを透明にする",
-  "Setting_taskbar-transparent_Description": "タスクバーの透明度を制御",
+  "Setting_taskbar-transparent_Name": "タスクバーの透明度",
+  "Setting_taskbar-transparent_Description": "タスクバーの透明度レベルを制御します。Winhanceはこの設定が適用されると自動的に透明効果を有効にします",
+  "Setting_taskbar-transparent_Option_0": "Windowsの既定",
+  "Setting_taskbar-transparent_Option_1": "透明",
+  "Setting_taskbar-transparent_Option_2": "不透明",
   "Setting_taskbar-small_Name": "タスクバーを小さくする",
   "Setting_taskbar-small_Description": "小さいアイコンを使用してタスクバーの高さを減らし、画面スペースを増やす",
   "Setting_taskbar-end-task_Name": "タスクバーで「タスクの終了」を有効にする",
