--- a/src/Winhance.UI/Features/Common/Localization/lt.json
+++ b/src/Winhance.UI/Features/Common/Localization/lt.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "Taikomi optimizavimai...",
   "Config_Import_Progress_Customize": "Taikomi pritaikymai...",
   "Config_Import_Progress_Refresh": "Atnaujinama Windows vartotojo sąsaja...",
+  "Config_Import_Status_RestartingExplorer": "Paleidžiama iš naujo Naršyklė...",
   "Config_Import_Success_Title": "Konfigūracija pritaikyta",
   "Config_Import_Success_Message": "Jūsų konfigūracija sėkmingai pritaikyta.",
   "Config_Import_Error_NoSelection": "Prašome pasirinkti bent vieną skyrių importuoti.",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "Rodyti valdiklių mygtuką, kuriame rodomos suasmenintos naujienos, oras, kalendorius ir kita informacija",
   "Setting_taskbar-news-and-interests_Name": "Rodyti naujienas ir pomėgius",
   "Setting_taskbar-news-and-interests_Description": "Rodyti naujienų ir pomėgių valdiklį, kuriame rodomos antraštės, oras, akcijos ir kitas suasmenintas turinys",
-  "Setting_taskbar-transparent_Name": "Padaryti užduočių juostą skaidrią",
-  "Setting_taskbar-transparent_Description": "Kontroliuoja užduočių juostos skaidrumą",
+  "Setting_taskbar-transparent_Name": "Užduočių juostos skaidrumas",
+  "Setting_taskbar-transparent_Description": "Kontroliuoja užduočių juostos skaidrumo lygį. Winhance automatiškai įjungia skaidrumo efektus, kai šis nustatymas pritaikomas",
+  "Setting_taskbar-transparent_Option_0": "Windows numatytasis",
+  "Setting_taskbar-transparent_Option_1": "Skaidri",
+  "Setting_taskbar-transparent_Option_2": "Neskaidri",
   "Setting_taskbar-small_Name": "Padaryti užduočių juostą mažą",
   "Setting_taskbar-small_Description": "Sumažinti užduočių juostos aukštį naudojant mažesnes piktogramas, suteikiant daugiau ekrano vietos",
   "Setting_taskbar-end-task_Name": "Įjungti „Užbaigti užduotį“ užduočių juostoje",
