--- a/src/Winhance.UI/Features/Common/Localization/lv.json
+++ b/src/Winhance.UI/Features/Common/Localization/lv.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "Lieto optimizācijas...",
   "Config_Import_Progress_Customize": "Lieto pielāgojumus...",
   "Config_Import_Progress_Refresh": "Atsvaidzina Windows lietotāja saskarni...",
+  "Config_Import_Status_RestartingExplorer": "Pārstartē Pārlūku...",
   "Config_Import_Success_Title": "Konfigurācija lietota",
   "Config_Import_Success_Message": "Jūsu konfigurācija ir veiksmīgi lietota.",
   "Config_Import_Error_NoSelection": "Lūdzu, atlasiet vismaz vienu sadaļu, ko importēt.",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "Rādīt logrīku pogu, kas parāda personalizētas ziņas, laika ziņas, kalendāru un citu informāciju",
   "Setting_taskbar-news-and-interests_Name": "Rādīt ziņas un intereses",
   "Setting_taskbar-news-and-interests_Description": "Rādīt ziņu un interešu logrīku, kas parāda virsrakstus, laika ziņas, akcijas un citu personalizētu saturu",
-  "Setting_taskbar-transparent_Name": "Padarīt uzdevumjoslu caurspīdīgu",
-  "Setting_taskbar-transparent_Description": "Kontrolē uzdevumjoslas caurspīdīgumu",
+  "Setting_taskbar-transparent_Name": "Uzdevumjoslas caurspīdīgums",
+  "Setting_taskbar-transparent_Description": "Kontrolē uzdevumjoslas caurspīdīguma līmeni. Winhance automātiski iespējo caurspīdīguma efektus, kad šis iestatījums tiek lietots",
+  "Setting_taskbar-transparent_Option_0": "Windows noklusējums",
+  "Setting_taskbar-transparent_Option_1": "Caurspīdīga",
+  "Setting_taskbar-transparent_Option_2": "Necaurspīdīga",
   "Setting_taskbar-small_Name": "Padarīt uzdevumjoslu mazu",
   "Setting_taskbar-small_Description": "Samazināt uzdevumjoslas augstumu, izmantojot mazākas ikonas, dodot jums vairāk ekrāna vietas",
   "Setting_taskbar-end-task_Name": "Iespējot 'Beigt uzdevumu' uzdevumjoslā",
