--- a/src/Winhance.UI/Features/Common/Localization/nl-BE.json
+++ b/src/Winhance.UI/Features/Common/Localization/nl-BE.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "Optimalisaties toepassen...",
   "Config_Import_Progress_Customize": "Aanpassingen toepassen...",
   "Config_Import_Progress_Refresh": "Windows UI vernieuwen...",
+  "Config_Import_Status_RestartingExplorer": "Verkenner wordt opnieuw gestart...",
   "Config_Import_Success_Title": "Configuratie Toegepast",
   "Config_Import_Success_Message": "Uw configuratie is succesvol toegepast.",
   "Config_Import_Error_NoSelection": "Selecteer ten minste één sectie om te importeren.",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "Toon de Widgets-knop die gepersonaliseerd nieuws, weer, agenda en andere informatie weergeeft",
   "Setting_taskbar-news-and-interests_Name": "Nieuws en interesses weergeven",
   "Setting_taskbar-news-and-interests_Description": "Toon de Nieuws en interesses widget die koppen, weer, aandelen en andere gepersonaliseerde inhoud weergeeft",
-  "Setting_taskbar-transparent_Name": "Taakbalk transparant maken",
-  "Setting_taskbar-transparent_Description": "Regelt de transparantie van de taakbalk",
+  "Setting_taskbar-transparent_Name": "Taakbalktransparantie",
+  "Setting_taskbar-transparent_Description": "Regelt het transparantieniveau van de taakbalk. Winhance schakelt automatisch transparantie-effecten in wanneer deze instelling wordt toegepast",
+  "Setting_taskbar-transparent_Option_0": "Windows-standaard",
+  "Setting_taskbar-transparent_Option_1": "Transparant",
+  "Setting_taskbar-transparent_Option_2": "Ondoorzichtig",
   "Setting_taskbar-small_Name": "Taakbalk klein maken",
   "Setting_taskbar-small_Description": "Verklein de hoogte van de taakbalk door kleinere pictogrammen te gebruiken, voor meer schermruimte",
   "Setting_taskbar-end-task_Name": "\u0027Taak beëindigen\u0027 inschakelen in taakbalk",
