--- a/src/Winhance.UI/Features/Common/Localization/pl.json
+++ b/src/Winhance.UI/Features/Common/Localization/pl.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "Stosowanie optymalizacji...",
   "Config_Import_Progress_Customize": "Stosowanie dostosowań...",
   "Config_Import_Progress_Refresh": "Odświeżanie interfejsu Windows...",
+  "Config_Import_Status_RestartingExplorer": "Ponowne uruchamianie Eksploratora...",
   "Config_Import_Success_Title": "Konfiguracja zastosowana",
   "Config_Import_Success_Message": "Twoja konfiguracja została pomyślnie zastosowana.",
   "Config_Import_Error_NoSelection": "Wybierz przynajmniej jedną sekcję do importowania.",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "Pokaż przycisk Widżety, który wyświetla spersonalizowane wiadomości, pogodę, kalendarz i inne informacje",
   "Setting_taskbar-news-and-interests_Name": "Pokaż wiadomości i zainteresowania",
   "Setting_taskbar-news-and-interests_Description": "Pokaż widżet Wiadomości i zainteresowania, który wyświetla nagłówki, pogodę, akcje i inne spersonalizowane treści",
-  "Setting_taskbar-transparent_Name": "Uczyń pasek zadań przezroczystym",
-  "Setting_taskbar-transparent_Description": "Kontroluje przezroczystość paska zadań",
+  "Setting_taskbar-transparent_Name": "Przezroczystość paska zadań",
+  "Setting_taskbar-transparent_Description": "Kontroluje poziom przezroczystości paska zadań. Winhance automatycznie włącza efekty przezroczystości po zastosowaniu tego ustawienia",
+  "Setting_taskbar-transparent_Option_0": "Domyślne Windows",
+  "Setting_taskbar-transparent_Option_1": "Przezroczysty",
+  "Setting_taskbar-transparent_Option_2": "Nieprzezroczysty",
   "Setting_taskbar-small_Name": "Uczyń pasek zadań małym",
   "Setting_taskbar-small_Description": "Zmniejsz wysokość paska zadań, używając mniejszych ikon, co daje więcej miejsca na ekranie",
   "Setting_taskbar-end-task_Name": "Włącz 'Zakończ zadanie' na pasku zadań",
