--- a/src/Winhance.UI/Features/Common/Localization/pt.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "A aplicar Otimizações...",
   "Config_Import_Progress_Customize": "A aplicar Personalizações...",
   "Config_Import_Progress_Refresh": "A atualizar a interface do Windows...",
+  "Config_Import_Status_RestartingExplorer": "A reiniciar o Explorador...",
   "Config_Import_Success_Title": "Configuração Aplicada",
   "Config_Import_Success_Message": "A sua configuração foi aplicada com sucesso.",
   "Config_Import_Error_NoSelection": "Por favor, selecione pelo menos uma secção para importar.",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "Mostrar o botão Widgets que exibe notícias personalizadas, meteorologia, calendário e outra informação",
   "Setting_taskbar-news-and-interests_Name": "Mostrar Notícias e Interesses",
   "Setting_taskbar-news-and-interests_Description": "Mostrar o widget Notícias e Interesses que exibe manchetes, meteorologia, ações e outro conteúdo personalizado",
-  "Setting_taskbar-transparent_Name": "Tornar a barra de tarefas transparente",
-  "Setting_taskbar-transparent_Description": "Controla a transparência da barra de tarefas",
+  "Setting_taskbar-transparent_Name": "Transparência da barra de tarefas",
+  "Setting_taskbar-transparent_Description": "Controla o nível de transparência da barra de tarefas. O Winhance ativa automaticamente os efeitos de transparência quando esta definição é aplicada",
+  "Setting_taskbar-transparent_Option_0": "Predefinição do Windows",
+  "Setting_taskbar-transparent_Option_1": "Transparente",
+  "Setting_taskbar-transparent_Option_2": "Opaco",
   "Setting_taskbar-small_Name": "Tornar a barra de tarefas pequena",
   "Setting_taskbar-small_Description": "Reduzir a altura da barra de tarefas usando ícones mais pequenos, dando-lhe mais espaço no ecrã",
   "Setting_taskbar-end-task_Name": "Ativar 'Terminar Tarefa' na Barra de Tarefas",
