--- a/src/Winhance.UI/Features/Common/Localization/ru.json
+++ b/src/Winhance.UI/Features/Common/Localization/ru.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "Применение оптимизаций...",
   "Config_Import_Progress_Customize": "Применение настроек...",
   "Config_Import_Progress_Refresh": "Обновление интерфейса Windows...",
+  "Config_Import_Status_RestartingExplorer": "Перезапуск Проводника...",
   "Config_Import_Success_Title": "Конфигурация применена",
   "Config_Import_Success_Message": "Ваша конфигурация была успешно применена.",
   "Config_Import_Error_NoSelection": "Пожалуйста, выберите хотя бы один раздел для импорта.",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "Показывать кнопку 'Виджеты', которая отображает персонализированные новости, погоду, календарь и другую информацию",
   "Setting_taskbar-news-and-interests_Name": "Показывать 'Новости и интересы'",
   "Setting_taskbar-news-and-interests_Description": "Показывать виджет 'Новости и интересы', который отображает заголовки, погоду, акции и другой персонализированный контент",
-  "Setting_taskbar-transparent_Name": "Сделать панель задач прозрачной",
-  "Setting_taskbar-transparent_Description": "Управляет прозрачностью панели задач",
+  "Setting_taskbar-transparent_Name": "Прозрачность панели задач",
+  "Setting_taskbar-transparent_Description": "Управляет уровнем прозрачности панели задач. Winhance автоматически включает эффекты прозрачности при применении этой настройки",
+  "Setting_taskbar-transparent_Option_0": "По умолчанию Windows",
+  "Setting_taskbar-transparent_Option_1": "Прозрачная",
+  "Setting_taskbar-transparent_Option_2": "Непрозрачная",
   "Setting_taskbar-small_Name": "Сделать панель задач маленькой",
   "Setting_taskbar-small_Description": "Уменьшить высоту панели задач, используя меньшие значки, что дает больше места на экране",
   "Setting_taskbar-end-task_Name": "Включить 'Завершить задачу' на панели задач",
