--- a/src/Winhance.UI/Features/Common/Localization/sv.json
+++ b/src/Winhance.UI/Features/Common/Localization/sv.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "Tillämpar optimeringar...",
   "Config_Import_Progress_Customize": "Tillämpar anpassningar...",
   "Config_Import_Progress_Refresh": "Uppdaterar Windows UI...",
+  "Config_Import_Status_RestartingExplorer": "Startar om Utforskaren...",
   "Config_Import_Success_Title": "Konfigurationen har tillämpats",
   "Config_Import_Success_Message": "Din konfiguration har tillämpats framgångsrikt.",
   "Config_Import_Error_NoSelection": "Välj minst en sektion att importera.",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "Visa knappen Widgetar som visar personliga nyheter, väder, kalender och annan information",
   "Setting_taskbar-news-and-interests_Name": "Visa Nyheter och intressen",
   "Setting_taskbar-news-and-interests_Description": "Visa widgeten Nyheter och intressen som visar rubriker, väder, aktier och annat personligt innehåll",
-  "Setting_taskbar-transparent_Name": "Gör Aktivitetsfältet genomskinligt",
-  "Setting_taskbar-transparent_Description": "Styr genomskinligheten i Aktivitetsfältet",
+  "Setting_taskbar-transparent_Name": "Genomskinlighet för Aktivitetsfältet",
+  "Setting_taskbar-transparent_Description": "Styr genomskinlighetsnivån för Aktivitetsfältet. Winhance aktiverar automatiskt genomskinlighetseffekter när denna inställning tillämpas",
+  "Setting_taskbar-transparent_Option_0": "Windows-standard",
+  "Setting_taskbar-transparent_Option_1": "Genomskinlig",
+  "Setting_taskbar-transparent_Option_2": "Ogenomskinlig",
   "Setting_taskbar-small_Name": "Gör Aktivitetsfältet litet",
   "Setting_taskbar-small_Description": "Minska höjden på Aktivitetsfältet genom att använda mindre ikoner, vilket ger dig mer skärmutrymme",
   "Setting_taskbar-end-task_Name": "Aktivera 'Avsluta aktivitet' i Aktivitetsfältet",
