--- a/src/Winhance.UI/Features/Common/Localization/uk.json
+++ b/src/Winhance.UI/Features/Common/Localization/uk.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "Застосування оптимізацій...",
   "Config_Import_Progress_Customize": "Застосування налаштувань...",
   "Config_Import_Progress_Refresh": "Оновлення інтерфейсу Windows...",
+  "Config_Import_Status_RestartingExplorer": "Перезапуск Провідника...",
   "Config_Import_Success_Title": "Конфігурацію застосовано",
   "Config_Import_Success_Message": "Вашу конфігурацію успішно застосовано.",
   "Config_Import_Error_NoSelection": "Будь ласка, виберіть принаймні один розділ для імпорту.",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "Показувати кнопку 'Віджети', яка відображає персоналізовані новини, погоду, календар та іншу інформацію",
   "Setting_taskbar-news-and-interests_Name": "Показувати новини та інтереси",
   "Setting_taskbar-news-and-interests_Description": "Показувати віджет 'Новини та інтереси', який відображає заголовки, погоду, акції та інший персоналізований контент",
-  "Setting_taskbar-transparent_Name": "Зробити панель завдань прозорою",
-  "Setting_taskbar-transparent_Description": "Керує прозорістю панелі завдань",
+  "Setting_taskbar-transparent_Name": "Прозорість панелі завдань",
+  "Setting_taskbar-transparent_Description": "Керує рівнем прозорості панелі завдань. Winhance автоматично вмикає ефекти прозорості, коли цей параметр застосовується",
+  "Setting_taskbar-transparent_Option_0": "За замовчуванням Windows",
+  "Setting_taskbar-transparent_Option_1": "Прозора",
+  "Setting_taskbar-transparent_Option_2": "Непрозора",
   "Setting_taskbar-small_Name": "Зробити панель завдань маленькою",
   "Setting_taskbar-small_Description": "Зменшити висоту панелі завдань, використовуючи менші іконки, що дає більше екранного простору",
   "Setting_taskbar-end-task_Name": "Увімкнути 'Завершити завдання' на панелі завдань",
