--- a/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "正在应用优化...",
   "Config_Import_Progress_Customize": "正在应用自定义...",
   "Config_Import_Progress_Refresh": "正在刷新 Windows UI...",
+  "Config_Import_Status_RestartingExplorer": "正在重启资源管理器...",
   "Config_Import_Success_Title": "配置已应用",
   "Config_Import_Success_Message": "您的配置已成功应用。",
   "Config_Import_Error_NoSelection": "请至少选择一个部分进行导入。",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "显示小组件按钮，显示个性化的新闻、天气、日历和其他信息",
   "Setting_taskbar-news-and-interests_Name": "显示新闻和兴趣",
   "Setting_taskbar-news-and-interests_Description": "显示新闻和兴趣小组件，显示头条新闻、天气、股票和其他个性化内容",
-  "Setting_taskbar-transparent_Name": "使任务栏透明",
-  "Setting_taskbar-transparent_Description": "控制任务栏的透明度",
+  "Setting_taskbar-transparent_Name": "任务栏透明度",
+  "Setting_taskbar-transparent_Description": "控制任务栏的透明度级别。应用此设置时，Winhance 会自动启用透明效果",
+  "Setting_taskbar-transparent_Option_0": "Windows 默认",
+  "Setting_taskbar-transparent_Option_1": "透明",
+  "Setting_taskbar-transparent_Option_2": "不透明",
   "Setting_taskbar-small_Name": "使任务栏变小",
   "Setting_taskbar-small_Description": "通过使用较小的图标来减小任务栏的高度，为您提供更多的屏幕空间",
   "Setting_taskbar-end-task_Name": "在任务栏中启用‘结束任务’",
