--- a/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "正在套用最佳化...",
   "Config_Import_Progress_Customize": "正在套用自訂設定...",
   "Config_Import_Progress_Refresh": "正在重新整理 Windows UI...",
+  "Config_Import_Status_RestartingExplorer": "正在重新啟動檔案總管...",
   "Config_Import_Success_Title": "設定已套用",
   "Config_Import_Success_Message": "您的設定已成功套用。",
   "Config_Import_Error_NoSelection": "請至少選擇一個要匯入的區塊。",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "顯示小工具按鈕，可查看個人化新聞、天氣、行事曆和其他資訊",
   "Setting_taskbar-news-and-interests_Name": "顯示新聞和興趣",
   "Setting_taskbar-news-and-interests_Description": "顯示新聞和興趣小工具，可查看頭條新聞、天氣、股票和其他個人化內容",
-  "Setting_taskbar-transparent_Name": "使工作列透明",
-  "Setting_taskbar-transparent_Description": "控制工作列的透明度",
+  "Setting_taskbar-transparent_Name": "工作列透明度",
+  "Setting_taskbar-transparent_Description": "控制工作列的透明度等級。套用此設定時，Winhance 會自動啟用透明效果",
+  "Setting_taskbar-transparent_Option_0": "Windows 預設",
+  "Setting_taskbar-transparent_Option_1": "透明",
+  "Setting_taskbar-transparent_Option_2": "不透明",
   "Setting_taskbar-small_Name": "使用小工作列按鈕",
   "Setting_taskbar-small_Description": "使用較小的圖示來降低工作列高度，讓您有更多螢幕空間",
   "Setting_taskbar-end-task_Name": "在工作列啟用「結束工作」",
