--- a/src/Winhance.UI/Features/Common/Localization/en.json
+++ b/src/Winhance.UI/Features/Common/Localization/en.json
@@ -322,8 +322,11 @@
   "Setting_taskbar-widgets_Description": "Show the Widgets button that displays personalized news, weather, calendar, and other information",
   "Setting_taskbar-news-and-interests_Name": "Show News and Interests",
   "Setting_taskbar-news-and-interests_Description": "Show the News and Interests widget that displays headlines, weather, stocks, and other personalized content",
-  "Setting_taskbar-transparent_Name": "Make taskbar transparent",
-  "Setting_taskbar-transparent_Description": "Controls the transparency of the taskbar",
+  "Setting_taskbar-transparent_Name": "Taskbar Transparency",
+  "Setting_taskbar-transparent_Description": "Controls the transparency level of the taskbar. Winhance automatically enables Transparency Effects when this setting is applied",
+  "Setting_taskbar-transparent_Option_0": "Windows default",
+  "Setting_taskbar-transparent_Option_1": "Transparent",
+  "Setting_taskbar-transparent_Option_2": "Opaque",
   "Setting_taskbar-small_Name": "Make taskbar small",
   "Setting_taskbar-small_Description": "Reduce the height of the taskbar by using smaller icons, giving you more screen space",
   "Setting_taskbar-end-task_Name": "Enable \u0027End Task\u0027 in Taskbar",
