--- a/src/Winhance.UI/Features/Common/Localization/vi.json
+++ b/src/Winhance.UI/Features/Common/Localization/vi.json
@@ -103,6 +103,7 @@
   "Config_Import_Progress_Optimize": "Đang áp dụng tối ưu hóa...",
   "Config_Import_Progress_Customize": "Đang áp dụng tùy chỉnh...",
   "Config_Import_Progress_Refresh": "Đang làm mới giao diện người dùng Windows...",
+  "Config_Import_Status_RestartingExplorer": "Đang khởi động lại Explorer...",
   "Config_Import_Success_Title": "Đã áp dụng cấu hình",
   "Config_Import_Success_Message": "Cấu hình của bạn đã được áp dụng thành công.",
   "Config_Import_Error_NoSelection": "Vui lòng chọn ít nhất một phần để nhập.",
@@ -286,8 +287,11 @@
   "Setting_taskbar-widgets_Description": "Hiển thị nút Tiện ích hiển thị tin tức, thời tiết, lịch và thông tin được cá nhân hóa khác",
   "Setting_taskbar-news-and-interests_Name": "Hiển thị Tin tức và Sở thích",
   "Setting_taskbar-news-and-interests_Description": "Hiển thị tiện ích Tin tức và Sở thích hiển thị các tiêu đề, thời tiết, chứng khoán và nội dung được cá nhân hóa khác",
-  "Setting_taskbar-transparent_Name": "Làm cho thanh tác vụ trong suốt",
-  "Setting_taskbar-transparent_Description": "Kiểm soát độ trong suốt của thanh tác vụ",
+  "Setting_taskbar-transparent_Name": "Độ trong suốt thanh tác vụ",
+  "Setting_taskbar-transparent_Description": "Kiểm soát mức độ trong suốt của thanh tác vụ. Winhance tự động bật hiệu ứng trong suốt khi cài đặt này được áp dụng",
+  "Setting_taskbar-transparent_Option_0": "Mặc định Windows",
+  "Setting_taskbar-transparent_Option_1": "Trong suốt",
+  "Setting_taskbar-transparent_Option_2": "Mờ đục",
   "Setting_taskbar-small_Name": "Làm cho thanh tác vụ nhỏ",
   "Setting_taskbar-small_Description": "Giảm chiều cao của thanh tác vụ bằng cách sử dụng các biểu tượng nhỏ hơn, giúp bạn có thêm không gian màn hình",
   "Setting_taskbar-end-task_Name": "Bật 'Kết thúc tác vụ' trên Thanh tác vụ",
